[package]
name = "f_psi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "4", features = [
    "rand_core",
    "digest",
    "serde",
] }
rand = "0.8"
fxhash = "0.2"
blake3 = "1.5.0"
bincode = "1.3.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

# [[bench]]
# name = "okvs-benchmarks"
# harness = false

# [[bench]]
# name = "psi-benchmarks"
# harness = false

[profile.release]
lto = true

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1
debug = false
overflow-checks = false

# [lib]
# name = "f_psi"
# path = "src/lib.rs"

[[bin]]
name = "f_psi"
path = "src/main.rs"
