[package]
name = "vbp24_ufpsi"
version = "0.2.0"
edition = "2021"
description = "vBP24 upsi版本"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "4.1.3", features = [
    "rand_core",
    "digest",
    "serde",
] }
rand = "0.8.5"
fxhash = "0.2"
blake3 = "1.8.2"
bincode = "1.3.3"
clap = { version = "4.5.45", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

# [[bench]]
# name = "okvs-benchmarks"
# harness = false

# [[bench]]
# name = "psi-benchmarks"
# harness = false

[profile.release]
lto = true

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1
debug = false
overflow-checks = false


[[bin]]
name = "vBP24_ufpsi"
path = "src/main.rs"
